contrast fix

--- a/main.css
+++ b/main.css
@@ -113,7 +113,7 @@ h3{
     font-family: 'Montserrat', sans-serif;
     text-align: center;
     margin-bottom: 10%;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 700;
     color: white;
     
